--- a/Basic_parts.ipynb
+++ b/Basic_parts.ipynb
@@ -49,7 +49,22 @@
     "\n",
     ">**Po co są tutaj krzywe eliptyczne?**\n",
     "\n",
-    "* Aby odkryć moc Izogenii, które będą wyjaśnionie dużo później najpierw należy odkryć krzywe eliptyczne."
+    "* Aby odkryć moc Izogenii, które będą wyjaśnionie w późniejszych akapitach najpierw należy odkryć krzywe eliptyczne. Przedstawimy najprostsze i niezbędne zagadania dot. tego tematu. Na początek należy zdefiniować działania na potrzeby szyfrowania w kryptografii.\\\n",
+    "Można udowodnić, że każdą krzywą eliptyczną można zapisać w postaci: y<sup>2</sup> + axy + by = x<sup>3</sup> + cx<sup>2</sup> + dx + e\n",
+    "\n",
+    ">**Aksjomaty**\n",
+    "\n",
+    "* Aby nie zagłębiać się w szczegóły matematyczne - tak naprawdę powinniśmy zacząć od definicji nad pewnym ciałem z definiowanymi działaniami - przedstawimy w prosty sposób metodę działania.\n",
+    "\n",
+    "* Wprowadźmy parę rzeczy:\n",
+    "\n",
+    "    * Spróbujmy pododawać punkty na płaszczyźnie. Dodawanie definiujemy następująco:\\\n",
+    "    Jeśli trzy punkty (A, B, C) są współliniowe to ***A + B + C = 0***.\n",
+    "\n",
+    "    * Negacją punktu nazywamy operację *odbiciem* punktu względem osi O<sub>x</sub> - oznaczamy wtedy taki punkt z minusem.\\\n",
+    "    Zatem jeśli mamy już te dwa działania, to wyobraźmy sobie dwa punkty i przeprowadźmy przez nią prostą. Niech te punkty należą do prostej o równaniu y<sup>2</sup> = x<sup>3</sup> - 3x + 4. Punkty mają współrzędne A=(-2, $\\sqrt{2}$), B=(0,2)\n",
+    "\n",
+    "    ![]()"
    ]
   }
  ],
