--- a/Basic_parts.ipynb
+++ b/Basic_parts.ipynb
@@ -54,17 +54,149 @@
     "\n",
     ">**Aksjomaty**\n",
     "\n",
-    "* Aby nie zagłębiać się w szczegóły matematyczne - tak naprawdę powinniśmy zacząć od definicji nad pewnym ciałem z definiowanymi działaniami - przedstawimy w prosty sposób metodę działania.\n",
-    "\n",
     "* Wprowadźmy parę rzeczy:\n",
     "\n",
     "    * Spróbujmy pododawać punkty na płaszczyźnie. Dodawanie definiujemy następująco:\\\n",
-    "    Jeśli trzy punkty (A, B, C) są współliniowe to ***A + B + C = 0***.\n",
+    "    Jeśli trzy punkty (A, B, C) są współliniowe to ***A + B + C = 0***.\\\n",
+    "    Zatem A + B = -C => Należy zdefiniować co oznacza punkt **-C**.\n",
     "\n",
-    "    * Negacją punktu nazywamy operację *odbiciem* punktu względem osi O<sub>x</sub> - oznaczamy wtedy taki punkt z minusem.\\\n",
-    "    Zatem jeśli mamy już te dwa działania, to wyobraźmy sobie dwa punkty i przeprowadźmy przez nią prostą. Niech te punkty należą do prostej o równaniu y<sup>2</sup> = x<sup>3</sup> - 3x + 4. Punkty mają współrzędne A=(-2, $\\sqrt{2}$), B=(0,2)\n",
+    "    * Negacją punktu nazywamy operację *odbicia* punktu względem osi O<sub>x</sub> - oznaczamy wtedy taki punkt z minusem.\\\n",
+    "    Zatem jeśli mamy już te dwa działania, to wyobraźmy sobie dwa punkty i przeprowadźmy przez nią prostą. Niech te punkty należą do krzywej o równaniu y<sup>2</sup> = x<sup>3</sup> - 3x + 4. Punkty mają współrzędne A=(-2, $\\sqrt{2}$), B=(0,2). Obliczamy równanie prostej (do wizualizacji użyto kalkulatory graficznego [Desmos](https://www.desmos.com/calculator?lang=pl))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extended_euclidean_algorithm(a, b):\n",
+    "    \n",
+    "    s, old_s = 0, 1\n",
+    "    t, old_t = 1, 0\n",
+    "    r, old_r = b, a\n",
     "\n",
-    "    ![]()"
+    "    while r != 0:\n",
+    "        quotient = old_r // r\n",
+    "        old_r, r = r, old_r - quotient * r\n",
+    "        old_s, s = s, old_s - quotient * s\n",
+    "        old_t, t = t, old_t - quotient * t\n",
+    "\n",
+    "    return old_r, old_s, old_t\n",
+    "\n",
+    "\n",
+    "def inverse_of(n, p):\n",
+    "    \n",
+    "    gcd, x, y = extended_euclidean_algorithm(n, p)\n",
+    "    assert (n * x + p * y) % p == gcd\n",
+    "\n",
+    "    if gcd != 1:\n",
+    "        raise ValueError(\n",
+    "            '{} has no multiplicative inverse '\n",
+    "            'modulo {}'.format(n, p))\n",
+    "    else:\n",
+    "        return x % p\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "A = -3\n",
+    "B = 5\n",
+    "\n",
+    "class Point():\n",
+    "    def __init__(self, p, x=float(\"inf\"), y=float(\"inf\")):\n",
+    "        self.p = p\n",
+    "        self.x = x % p\n",
+    "        self.y = y % p\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Point({self.x},{self.y} with p={self.p})\"\n",
+    "\n",
+    "    def __add__(self, sec_point):\n",
+    "        if self.x == sec_point.x and self.y == sec_point.y:\n",
+    "            return self.double()\n",
+    "        \n",
+    "        dx = sec_point.x - self.x\n",
+    "        dy = sec_point.y - self.y\n",
+    "\n",
+    "        if dx == 0:\n",
+    "            return Point()\n",
+    "        \n",
+    "        slope = (dy * inverse_of(dx, self.p)) % self.p\n",
+    "        \n",
+    "        x = (slope ** 2) - self.x - sec_point.x\n",
+    "        y = slope * x + (self.y - slope * self.x)\n",
+    "        x %= self.p\n",
+    "        y %= self.p\n",
+    "        return Point(self.p, x, -y)\n",
+    "        \n",
+    "    def __mul__(self, n):\n",
+    "        if n == 0:\n",
+    "            return Point(self.p)\n",
+    "        if n == 1:\n",
+    "            return self\n",
+    "        if n == 2:\n",
+    "            return self.double()\n",
+    "        \n",
+    "        tmp_Point = self\n",
+    "        for i in range(n):\n",
+    "            tmp_Point = self + tmp_Point\n",
+    "\n",
+    "        return tmp_Point\n",
+    "\n",
+    "\n",
+    "    def double(self):\n",
+    "\n",
+    "        # A is the coefficient of x in the equation of the curve\n",
+    "        slope = (3 * (self.x ** 2) + A) * inverse_of(2 * self.y, self.p)\n",
+    "        x = (slope ** 2) - (2 * self.x)\n",
+    "        y = slope * x + (self.y - slope * self.x)\n",
+    "        \n",
+    "        x %= self.p\n",
+    "        y %= self.p\n",
+    "\n",
+    "        return Point(self.p, x, -y)\n",
+    "    \n",
+    "    def oppsite(self):\n",
+    "        return Point(self.p, self.x, -self.y)\n",
+    "    \n",
+    "    def arr(self):\n",
+    "        return [self.x, self.y]\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(82,246 with p=257)\n",
+      "Point(196,198 with p=257)\n"
+     ]
+    }
+   ],
+   "source": [
+    "P = 257\n",
+    "first_Point = Point(P, 2, 3)\n",
+    "second_Point = Point(P, 5, 18)\n",
+    "\n",
+    "three_time_first_Point = (first_Point + first_Point) + first_Point\n",
+    "\n",
+    "print(three_time_first_Point)\n",
+    "\n",
+    "\n",
+    "print(first_Point * 3)\n"
    ]
   }
  ],
@@ -75,8 +207,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
