--- a/Basic_parts.ipynb
+++ b/Basic_parts.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,8 @@
     "        dy = sec_point.y - self.y\n",
     "\n",
     "        if dx == 0:\n",
-    "            return Point()\n",
+    "            print(\"dx is 0\")\n",
+    "            return Point(self.p)\n",
     "        \n",
     "        slope = (dy * inverse_of(dx, self.p)) % self.p\n",
     "        \n",
@@ -136,20 +137,18 @@
     "        y %= self.p\n",
     "        return Point(self.p, x, -y)\n",
     "        \n",
-    "    def __mul__(self, n):\n",
-    "        if n == 0:\n",
+    "    def __mul__(self, scalar):\n",
+    "        if scalar == 0:\n",
     "            return Point(self.p)\n",
-    "        if n == 1:\n",
+    "        if scalar == 1:\n",
     "            return self\n",
-    "        if n == 2:\n",
-    "            return self.double()\n",
-    "        \n",
-    "        tmp_Point = self\n",
-    "        for i in range(n):\n",
-    "            tmp_Point = self + tmp_Point\n",
-    "\n",
-    "        return tmp_Point\n",
-    "\n",
+    "        if scalar % 2 == 0:\n",
+    "            lambda_ = ((3 * self.x * self.x + A) * inverse_of(2 * self.y, self.p)) % self.p\n",
+    "            new_x = (lambda_ * lambda_ - 2 * self.x) % self.p\n",
+    "            new_y = (lambda_ * (self.x - new_x) - self.y) % self.p\n",
+    "            return Point(self.p, new_x, new_y) * (scalar // 2)\n",
+    "        else:\n",
+    "            return self + self * (scalar - 1)\n",
     "\n",
     "    def double(self):\n",
     "\n",
@@ -174,29 +173,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(82,246 with p=257)\n",
-      "Point(196,198 with p=257)\n"
+      "Multi\n",
+      "Point(2,3 with p=257)\n",
+      "Point(191,99 with p=257)\n",
+      "Point(77,205 with p=257)\n",
+      "Point(77,205 with p=257)\n"
      ]
     }
    ],
    "source": [
     "P = 257\n",
+    "\n",
+    "\n",
     "first_Point = Point(P, 2, 3)\n",
-    "second_Point = Point(P, 5, 18)\n",
+    "print(\"Multi\")\n",
+    "print(first_Point)\n",
+    "print(first_Point + first_Point)\n",
+    "print(first_Point + first_Point + first_Point + first_Point + first_Point + first_Point)\n",
     "\n",
-    "three_time_first_Point = (first_Point + first_Point) + first_Point\n",
+    "print(first_Point * 6)\n",
+    "# print(first_Point * 17)\n",
     "\n",
-    "print(three_time_first_Point)\n",
-    "\n",
-    "\n",
-    "print(first_Point * 3)\n"
+    "# print(\"Adding\")\n",
+    "# print(first_Point)\n",
+    "# print(first_Point + first_Point)\n",
+    "# print(first_Point + first_Point + first_Point + first_Point)\n",
+    "\n"
    ]
   }
  ],
