--- a/Basic_parts.ipynb
+++ b/Basic_parts.ipynb
@@ -61,12 +61,12 @@
     "    Zatem A + B = -C => Należy zdefiniować co oznacza punkt **-C**.\n",
     "\n",
     "    * Negacją punktu nazywamy operację *odbicia* punktu względem osi O<sub>x</sub> - oznaczamy wtedy taki punkt z minusem.\\\n",
-    "    Zatem jeśli mamy już te dwa działania, to wyobraźmy sobie dwa punkty i przeprowadźmy przez nią prostą. Niech te punkty należą do krzywej o równaniu y<sup>2</sup> = x<sup>3</sup> - 3x + 4. Punkty mają współrzędne A=(-2, $\\sqrt{2}$), B=(0,2). Obliczamy równanie prostej (do wizualizacji użyto kalkulatory graficznego [Desmos](https://www.desmos.com/calculator?lang=pl))\n"
+    "    Zatem jeśli mamy już te dwa działania, to wyobraźmy sobie dwa punkty i przeprowadźmy przez nią prostą. Niech te punkty należą do krzywej o równaniu y<sup>2</sup> = x<sup>3</sup> - 3x + 4. Punkty mają współrzędne A=(-2, $\\sqrt{2}$), B=(0,2). Obliczamy równanie prostej (do wizualizacji użyto strony )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,6 @@
     "            return self + self * (scalar - 1)\n",
     "\n",
     "    def double(self):\n",
-    "\n",
     "        # A is the coefficient of x in the equation of the curve\n",
     "        slope = (3 * (self.x ** 2) + A) * inverse_of(2 * self.y, self.p)\n",
     "        x = (slope ** 2) - (2 * self.x)\n",
@@ -162,6 +161,12 @@
     "\n",
     "        return Point(self.p, x, -y)\n",
     "    \n",
+    "    def __getitem__(self, i):\n",
+    "        if i == 0:\n",
+    "            return self.x\n",
+    "        elif i == 1:\n",
+    "            return self.y\n",
+    "\n",
     "    def oppsite(self):\n",
     "        return Point(self.p, self.x, -self.y)\n",
     "    \n",
@@ -173,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
