curve_class_added

--- a/Basic_parts.ipynb
+++ b/Basic_parts.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,12 +109,21 @@
     "A = -3\n",
     "B = 5\n",
     "\n",
-    "class Point():\n",
-    "    def __init__(self, p, x=float(\"inf\"), y=float(\"inf\")):\n",
+    "class EllipticCurve():\n",
+    "    def __init__(self, a, b, p):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
     "        self.p = p\n",
-    "        self.x = x % p\n",
-    "        self.y = y % p\n",
     "\n",
+    "\n",
+    "class Point():\n",
+    "    def __init__(self, curve, x=float(\"inf\"), y=float(\"inf\")):\n",
+    "        self.curve = curve\n",
+    "        self.p = curve.p\n",
+    "        self.x = x % curve.p\n",
+    "        self.y = y % curve.p\n",
+    "\n",
+    "    \n",
     "    def __str__(self):\n",
     "        return f\"Point({self.x},{self.y} with p={self.p})\"\n",
     "\n",
@@ -127,7 +136,7 @@
     "\n",
     "        if dx == 0:\n",
     "            print(\"dx is 0\")\n",
-    "            return Point(self.p)\n",
+    "            return Point(self.curve)\n",
     "        \n",
     "        slope = (dy * inverse_of(dx, self.p)) % self.p\n",
     "        \n",
@@ -135,18 +144,18 @@
     "        y = slope * x + (self.y - slope * self.x)\n",
     "        x %= self.p\n",
     "        y %= self.p\n",
-    "        return Point(self.p, x, -y)\n",
+    "        return Point(self.curve, x, -y)\n",
     "        \n",
     "    def __mul__(self, scalar):\n",
     "        if scalar == 0:\n",
-    "            return Point(self.p)\n",
+    "            return Point(self.curve)\n",
     "        if scalar == 1:\n",
     "            return self\n",
     "        if scalar % 2 == 0:\n",
     "            lambda_ = ((3 * self.x * self.x + A) * inverse_of(2 * self.y, self.p)) % self.p\n",
     "            new_x = (lambda_ * lambda_ - 2 * self.x) % self.p\n",
     "            new_y = (lambda_ * (self.x - new_x) - self.y) % self.p\n",
-    "            return Point(self.p, new_x, new_y) * (scalar // 2)\n",
+    "            return Point(self.curve, new_x, new_y) * (scalar // 2)\n",
     "        else:\n",
     "            return self + self * (scalar - 1)\n",
     "\n",
@@ -159,7 +168,7 @@
     "        x %= self.p\n",
     "        y %= self.p\n",
     "\n",
-    "        return Point(self.p, x, -y)\n",
+    "        return Point(self.curve, x, -y)\n",
     "    \n",
     "    def __getitem__(self, i):\n",
     "        if i == 0:\n",
@@ -168,7 +177,7 @@
     "            return self.y\n",
     "\n",
     "    def oppsite(self):\n",
-    "        return Point(self.p, self.x, -self.y)\n",
+    "        return Point(self.curve, self.x, -self.y)\n",
     "    \n",
     "    def arr(self):\n",
     "        return [self.x, self.y]\n",
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +206,9 @@
     "P = 257\n",
     "\n",
     "\n",
-    "first_Point = Point(P, 2, 3)\n",
+    "el_curve = EllipticCurve(A, B, P)\n",
+    "\n",
+    "first_Point = Point(el_curve, 2, 3)\n",
     "print(\"Multi\")\n",
     "print(first_Point)\n",
     "print(first_Point + first_Point)\n",
