--- a/SIDHzopisami-sage.ipynb
+++ b/SIDHzopisami-sage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
     "nA = 16\n",
     "\n",
     "mB = 17\n",
-    "nB = 32\n",
+    "nB = 65\n",
     "\n",
     "test_KA(mA,nA,mB,nB,E)"
    ]
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,14 +265,14 @@
     "Wynikowa krzywa: $E_2: y^2 = x^3 + Dx + E$<br>\n",
     "$D=d-5v$<br>\n",
     "$E=e-7w$<br>\n",
-    "6. Obraz dowolnego punktu z wejściowej krzywej $(x, y)$ po przejściu przez obliczoną izogenię $(\\alpha, \\beta)$ jest dany wzorem:<br>\n",
+    "6. Obraz dowolnego punktu z wejściowej krzywej $(x, y)$ jego obraz $(\\alpha, \\beta)$ po przejściu przez obliczoną izogenię jest dany wzorem:<br>\n",
     "$\\alpha = x+ \\sum_{Q \\in S} (\\frac{v_Q}{x - x_Q} + \\frac{u_Q}{(x - x_Q)^2})$<br>\n",
-    "$\\beta = y - \\sum_{Q \\in S} (u_Q \\frac{2y+ax + b}{(x - x_Q)^3} + v_Q\\frac{a(x - x_Q) + y - y_Q}{(x - x_Q)^2}+ \\frac{au_Q - f_Qg_Q}{(x - x_Q)^2})$"
+    "$\\beta = y - \\sum_{Q \\in S} (u_Q \\frac{2y}{(x - x_Q)^3} + v_Q\\frac{y - y_Q}{(x - x_Q)^2}- \\frac{f_Qg_Q}{(x - x_Q)^2})$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
     "    dQx = 0\n",
     "    dPy = 0\n",
     "    dQy = 0\n",
-    "     for point in S:\n",
+    "    for point in S:\n",
     "        fq = 3 * point[0]**2 + d\n",
     "        gq = -2 * point[1]\n",
     "        vq = 0\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,15 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def key_der_Alice(m,n,E,P,Q):\n",
-    "    return key_der(m,n,lA,eA,E,P,Q)\n",
+    "    return key_derivation(m,n,lA,eA,E,P,Q)\n",
     "\n",
     "def key_der_Bob(m,n,E,P,Q):\n",
-    "    return key_der(m,n,lB,eB,E,P,Q)"
+    "    return key_derivation(m,n,lB,eB,E,P,Q)"
    ]
   },
   {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
