--- a/main_project.ipynb
+++ b/main_project.ipynb
@@ -60,15 +60,45 @@
     "    Jeśli trzy punkty (A, B, C) są współliniowe to ***A + B + C = 0***.\\\n",
     "    Zatem A + B = -C => Należy zdefiniować co oznacza punkt **-C**.\n",
     "\n",
-    "    * Negacją punktu nazywamy operację *odbicia* punktu względem osi O<sub>x</sub> - oznaczamy wtedy taki punkt z minusem.\\\n",
-    "    Zatem jeśli mamy już te dwa działania, to wyobraźmy sobie dwa punkty i przeprowadźmy przez nią prostą. Niech te punkty należą do krzywej o równaniu y<sup>2</sup> = x<sup>3</sup> - 3x + 4. Punkty mają współrzędne A=(-2, $\\sqrt{2}$), B=(0,2). Obliczamy równanie prostej (do wizualizacji użyto strony )\n"
+    "    * Negacją punktu nazywamy operację *odbicia* punktu względem osi O<sub>x</sub> - oznaczamy wtedy taki punkt z minusem.\n",
+    "    \n",
+    "Zatem jeśli mamy już te dwa działania, to wyobraźmy sobie dwa punkty i przeprowadźmy przez nią prostą. Niech te punkty należą do krzywej o równaniu y<sup>2</sup> = x<sup>3</sup> - 3x + 4. Punkty mają współrzędne A=(-2, $\\sqrt{2}$), B=(0,2). Obliczamy równanie prostej, które wraz z naszą zadaną krzywą eliptyczną tworzą układ równań, gdzie znamy już dwa rozwiązania (gdyż punkty A oraz B należą zarówno do krzywej jak i prostej). Następnie nalęzy znegować otrzymany punkt - poniżej wykres przedstawiający sytuację oraz pokazujący otrzymany punkt. Do zwizualizowania powyższej sytuacji (jak również pozostałych wykresów) użyto strony [Elliptic Curve scalar multiplication (𝔽p)](https://andrea.corbellini.name/ecc/interactive/reals-add.html))\n",
+    "\n",
+    "![](images/eliptic_add_basic.png)\n",
+    "\n",
+    "* Co jeżeli punkty się pokrywają, tzn. A = B ?\\\n",
+    "    Wtedy możemy poprowadzić styczną do wykresu w tym punkcie, czyli liczenie pochodnej funkcji - *UWAGA* krzywa eliptyczna nie jest funkcją, gdyż $y = \\pm\\sqrt{x^3 - 3x + 4}$. Z tego powodu należy dopasować funkcję do podanego punktu - zależy czy rzędna punktu jest dodatnia czy ujemna. Poniżej przedstawiono dodawanie A + A, czyli 2A:\n",
+    "\n",
+    "    ![](images/same_point_adding.png)\n",
+    "\n",
+    "* Mając dodawanie różnych oraz tych samych punktów, możemy teraz zdefiniować mnożenie punktu jako $n\\ ·\\ A = A + A + ... + A$, gdzie dodajemy A do siebie n razy, czyli: $A + A = 2A$, jak również: $A + A + A = 2A + A = 3A$ itd. Poniżej przykładowe mnożenie punktu A - 5 razy.\n",
+    "\n",
+    "    ![](images/multi_point.png)\n",
+    "\n",
+    ">**Czy można <i>utrudnić</i> cały proces?**\n",
+    "\n",
+    "Tak, można rozważać punkty tylko w pewnym ciele. Ciało te to 𝔽p, gdzie zamiast dzielenia będziemy wyznaczać element odwrotny w tym właśnie ciele skończonym. Jak sama nazwa mówi, ma ono ograniczoną liczbę elementów. Także poruszamy się tylko po pewnch punktach po naszej krzywej, która teraz przyjęła postać: $y^2 = x^3 + Ax + B\\ mod\\ P$.\n",
+    "\n",
+    ">**Kolejne kroki algorytmu**\n",
+    "\n",
+    "* Na początku potrzebujemy rozbudowanego algorytmu Euclidesa. Ogólnie polega na znalezieniu liczb, które spełniają poniższą zależność:\\\n",
+    "    ax + by = NWD(a, b) - gdzie NWD to najwięszky wspólny dzielnik liczby a oraz b.\\\n",
+    "    Poniżej podano jego implementację (skorzystano z danego [pseudokodu](https://en.wikipedia.org/wiki/Extended_Euclidean_algorithm#Pseudocode))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, -63, 17)\n"
+     ]
+    }
+   ],
    "source": [
     "def extended_euclidean_algorithm(a, b):\n",
     "    \n",
@@ -84,32 +114,62 @@
     "\n",
     "    return old_r, old_s, old_t\n",
     "\n",
-    "\n",
+    "print(extended_euclidean_algorithm(123, 456))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Następnie potrzebujemy dzielenia modulo, gdzie tak naprawdę nie istnieje takie działanie. Dlatego zamiast $\\frac{x}{y}$ będziemy używać $x\\cdot y^{-1}$. W przypadku naszego skończonego ciała $y^{-1}$ będziemy rozumieć jako element odwrotny do $y$. Do tego będzie nam słyżyć poniższa implementacja:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
     "def inverse_of(n, p):\n",
     "    \n",
     "    gcd, x, y = extended_euclidean_algorithm(n, p)\n",
     "    assert (n * x + p * y) % p == gcd\n",
     "\n",
     "    if gcd != 1:\n",
-    "        raise ValueError(\n",
-    "            '{} has no multiplicative inverse '\n",
-    "            'modulo {}'.format(n, p))\n",
-    "    else:\n",
-    "        return x % p\n"
+    "        raise ValueError(f\"{n} has no multiplicative inverse modulo {p}\")\n",
+    "    return x % p\n",
+    "\n",
+    "print(inverse_of(5, 19))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Poniżej z kolei znajduje się implementacja punktu należącego do 𝔽p oraz znajdujący się na zadanej krzywej. W komentarza kolejno wyjaśniono kolejne funkcje. Z pewnością najważniejsza funkcja to funkcja ```__mul__```, dzięki której jesteśmy w stanie mnożyć punkty przez skalary. Użyto tutaj algorytmu, który jest optymalny z pary względów. Zamiast dodawać punkty do siebie **n** razy można skorzystać z tzw. \"double and add\", czyli można pomnożyć ten punkt razy dwa a następnie przez skalar o połowę miejszy dopóki nie uzyskamy n pomnożonego punktu. Oczywiście trzeba pamiętać o liczbach nieparzystych co zostało uzwględnione w metodzie magicznej ```__mul__```:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "A = -3\n",
-    "B = 5\n",
-    "\n",
     "class EllipticCurve():\n",
+    "    # Tworzenie klasy krzywej eliptycznej\n",
+    "    # z współczynnikami A, B i liczbą pierwszą p\n",
     "    def __init__(self, a, b, p):\n",
     "        self.a = a\n",
     "        self.b = b\n",
@@ -117,6 +177,9 @@
     "\n",
     "\n",
     "class Point():\n",
+    "\n",
+    "    # Poniżej budujemy punkt i utożsamamy go z daną krzywą\n",
+    "    # Jeśli punkt nie jest określony, to ustawiamy x i y na nieskończoność - tzw. punkt w nieskończoności\n",
     "    def __init__(self, curve, x=float(\"inf\"), y=float(\"inf\")):\n",
     "        self.curve = curve\n",
     "        self.p = curve.p\n",
@@ -125,43 +188,56 @@
     "\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return f\"Point({self.x},{self.y} with p={self.p})\"\n",
+    "        return f\"Point({self.x}, {self.y} with p={self.p})\"\n",
     "\n",
     "    def __add__(self, sec_point):\n",
+    "        # sprawdzanie czy to ten sam punkt - czyli podwojenie go\n",
     "        if self.x == sec_point.x and self.y == sec_point.y:\n",
     "            return self.double()\n",
     "        \n",
     "        dx = sec_point.x - self.x\n",
     "        dy = sec_point.y - self.y\n",
     "\n",
+    "        # nie chcemy dzilić przez 0 :(\n",
     "        if dx == 0:\n",
-    "            print(\"dx is 0\")\n",
     "            return Point(self.curve)\n",
     "        \n",
+    "        # obliczanie nachylenia, lecz zamiast dzielić przez dx, to mnożymy przez jego element odwrotny        \n",
     "        slope = (dy * inverse_of(dx, self.p)) % self.p\n",
     "        \n",
     "        x = (slope ** 2) - self.x - sec_point.x\n",
     "        y = slope * x + (self.y - slope * self.x)\n",
     "        x %= self.p\n",
     "        y %= self.p\n",
+    "\n",
+    "        # pamiętajmy o zwróceniu negacji y\n",
     "        return Point(self.curve, x, -y)\n",
     "        \n",
     "    def __mul__(self, scalar):\n",
+    "        # funkcja jako mnożenie punktu przez skalar - czyli dodawanie\n",
+    "        \n",
+    "        # mnożenie przez 0 zwraca punkt w nieskończoności\n",
     "        if scalar == 0:\n",
     "            return Point(self.curve)\n",
+    "        # mnożenie przez 1 zwraca ten sam punkt\n",
     "        if scalar == 1:\n",
     "            return self\n",
+    "        \n",
+    "        # sytuacja przy skalarze parzystym\n",
     "        if scalar % 2 == 0:\n",
-    "            lambda_ = ((3 * self.x * self.x + A) * inverse_of(2 * self.y, self.p)) % self.p\n",
+    "            lambda_ = ((3 * self.x * self.x + self.curve.a) * inverse_of(2 * self.y, self.p)) % self.p\n",
     "            new_x = (lambda_ * lambda_ - 2 * self.x) % self.p\n",
     "            new_y = (lambda_ * (self.x - new_x) - self.y) % self.p\n",
     "            return Point(self.curve, new_x, new_y) * (scalar // 2)\n",
+    "        \n",
+    "        # pamiętać o nieparzystych skalarach - wtedy należy po prostu dodać\n",
     "        else:\n",
     "            return self + self * (scalar - 1)\n",
     "\n",
     "    def double(self):\n",
-    "        # A is the coefficient of x in the equation of the curve\n",
-    "        slope = (3 * (self.x ** 2) + A) * inverse_of(2 * self.y, self.p)\n",
+    "        # podwajanie punktu jako liczenie pochodnej - nachylenia stycznej\n",
+    "        \n",
+    "        slope = (3 * (self.x ** 2) + self.curve.a) * inverse_of(2 * self.y, self.p)\n",
     "        x = (slope ** 2) - (2 * self.x)\n",
     "        y = slope * x + (self.y - slope * self.x)\n",
     "        \n",
@@ -171,57 +247,78 @@
     "        return Point(self.curve, x, -y)\n",
     "    \n",
     "    def __getitem__(self, i):\n",
+    "        # funkcja pomocnicza do późniejszych algorytmów\n",
+    "\n",
     "        if i == 0:\n",
     "            return self.x\n",
     "        elif i == 1:\n",
     "            return self.y\n",
     "\n",
     "    def oppsite(self):\n",
-    "        return Point(self.curve, self.x, -self.y)\n",
-    "    \n",
-    "    def arr(self):\n",
-    "        return [self.x, self.y]\n",
-    "    \n",
-    "        "
+    "        # funkcja negująca\n",
+    "        return Point(self.curve, self.x, -self.y)    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Poniżej *drobny* test funkcji dodającej oraz mnożącej przy użyciu podanych parametrów"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Multi\n",
-      "Point(2,3 with p=257)\n",
-      "Point(191,99 with p=257)\n",
-      "Point(77,205 with p=257)\n",
-      "Point(77,205 with p=257)\n"
+      "Dwa pierwsze punkty\n",
+      "Point(3, 58 with p=257)\n",
+      "Point(112, 141 with p=257)\n",
+      "Następne punkty powinny być identyczne - mnożenie przez 6 lub dodawanie 6 razy tego samego punktu\n",
+      "Point(254, 66 with p=257)\n",
+      "Point(254, 66 with p=257)\n"
      ]
     }
    ],
    "source": [
     "P = 257\n",
+    "A = -3\n",
+    "B = 5\n",
     "\n",
+    "test_el_curve = EllipticCurve(A, B, P)\n",
     "\n",
-    "el_curve = EllipticCurve(A, B, P)\n",
+    "# punkt nalężacy do zadanej krzywej eliptycznej\n",
+    "first_Point = Point(test_el_curve, 3, 58)\n",
     "\n",
-    "first_Point = Point(el_curve, 2, 3)\n",
-    "print(\"Multi\")\n",
+    "print(\"Dwa pierwsze punkty\")\n",
     "print(first_Point)\n",
     "print(first_Point + first_Point)\n",
+    "\n",
+    "print(\"Następne punkty powinny być identyczne - mnożenie przez 6 lub dodawanie 6 razy tego samego punktu\")\n",
     "print(first_Point + first_Point + first_Point + first_Point + first_Point + first_Point)\n",
-    "\n",
     "print(first_Point * 6)\n",
-    "# print(first_Point * 17)\n",
-    "\n",
-    "# print(\"Adding\")\n",
-    "# print(first_Point)\n",
-    "# print(first_Point + first_Point)\n",
-    "# print(first_Point + first_Point + first_Point + first_Point)\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">**Wizualizacja powyższej implementacji**\n",
+    "\n",
+    "* Jak pamiętamy z wizualizacji, gdzie rozważaliśmy naszą krzywą eliptyczną nad ciałem ℝ, dodawanie to było to odbicie punktu względem osi odciętych punktu który jako trzeci należał jednocześnie do prostej oraz krzywej eliptycznej. Poniżej wizualizacja dodawania w naszym ciele skończonym\n",
+    "\n",
+    "    ![](images/eliptic_points.png)\n",
+    "\n",
+    "    Jak widzimy krzywa eliptyczna przyjęła postać pewnych punktów, a prosta to tak naprawdę prost**e**, którę przechodzą przez właśnie trzy punkty. Całość można porównać do poniższego rysunku torusa, gdzie prosta to tak naprawdę krzywa zakręcająca wokół niego ([źródło obrazu](https://mathematica.stackexchange.com/questions/115414/curve-wound-on-torus?noredirect=1)):\n",
+    "\n",
+    "    ![](images/torus.png)"
    ]
   }
  ],
@@ -241,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
